add and display new books

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 
+	<button id="newBook">New Book</button>
+
 	<table id="bookshelf">
-		<tr>
+		<tr id="header">
 			<th>Title</th>
 			<th>Author</th>
 			<th>Read?</th>
