add read status change and remove book basics

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 </head>
 <body>
 
-	<button id="newBook">New Book</button>
+	<div id="wrapper">
+		<button id="newBook">New Book</button>
 
-	<table id="bookshelf">
-		<tr id="header">
-			<th>Title</th>
-			<th>Author</th>
-			<th>Read?</th>
-		</tr>
-	</table>
+		<table id="bookshelf">
+			<tr id="header">
+				<th>Title</th>
+				<th>Author</th>
+				<th>Read?</th>
+				<th>Rating</th>
+			</tr>
+		</table>
+	</div>
 
 <script src="script.js"></script>
 
