complete assignment the way it was meant to with array of objs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 	<div id="wrapper">
 		<button id="newBook">New Book</button>
+		<button onclick="addSampleData()">Add Sample Books</button>
 
 		<table id="bookshelf">
 			<tr id="header">
@@ -24,6 +25,7 @@
 	</div>
 
 <script src="script.js"></script>
+<script>addSampleData();</script>
 
 </body>
 </html>
