add grid visualization

--- a/index.html
+++ b/index.html
@@ -17,19 +17,8 @@
 			<button onclick="addMarcoData()">Add Marco Books</button>
 			<button onclick="clearBookshelf()">Clear</button>
 		</div>
-		<div class="viewer">
+		<div class="bookshelf">
 
-			<table id="bookshelf">
-				<tr id="header">
-					<th>ID</th>
-					<th>Title</th>
-					<th>Author</th>
-					<th>Read?</th>
-					<th>Rating</th>
-					<th>Pages</th>
-					<th>Pub. Year</th>
-				</tr>
-			</table>
 		</div>
 
 <script src="script.js"></script>
