--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 		</div>
 
+<script src="lib/Please.js"></script>
 <script src="script.js"></script>
 <script src="data.js"></script>
 <script src="importData.js"></script>
