change layout, will get back when I learn fetch to display cover art

--- a/index.html
+++ b/index.html
@@ -9,22 +9,29 @@
 </head>
 <body>
 
-	<div class="container">
-		<div class="sidebar">
-			<h1>Bookshelf</h1>
-			<button id="newBook">New Book</button>
-			<button onclick="addSampleData()">Add Sample Books</button>
-			<button onclick="addMarcoData()">Add Marco Books</button>
-			<button onclick="clearBookshelf()">Clear</button>
+	<!-- <div class="modal">
+		<div class="detail-modal">
+			<p>prova prova prova</p>
 		</div>
+	</div> -->
+
+	<div class="container">
+		<header class="header">
+			<h1>Bookshelf</h1>
+			<!-- <button onclick="newBook()">New Book</button> -->
+			<!-- <button onclick="addSampleData()">Add Sample Books</button> -->
+			<!-- <button onclick="addMarcoData()">Add Marco Books</button> -->
+			<!-- <button onclick="clearBookshelf()">Clear</button> -->
+		</header>
 		<div class="bookshelf">
 
 		</div>
 
-<script src="lib/Please.js"></script>
-<script src="script.js"></script>
 <script src="data.js"></script>
+<script src="lib/Please.js"></script>
 <script src="importData.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
+
